refactor: Remove enterprise_catalogs API endpoint
