# api.yaml
@@ -109,368 +109,6 @@ course_run_id_parameter:
   type: string
 endpoints:
   v1:
-    enterpriseCustomerCatalogByUuid:
-      get:
-        operationId: get_enterprise_customer_catalog_by_uuid
-        parameters:
-          -
-            in: header
-            name: Authorization
-            required: true
-            type: string
-          -
-            in: path
-            name: uuid
-            required: true
-            type: string
-          -
-            in: query
-            name: page
-            required: false
-            type: number
-          -
-            in: query
-            name: page_size
-            required: false
-            type: number
-        produces:
-          - application/json
-          - application/csv
-        responses:
-          200:
-            description: OK
-          400:
-            description: "Bad Request"
-          401:
-            description: Unauthorized
-          403:
-            description: Forbidden
-          404:
-            description: "Not Found"
-          429:
-            description: "Too Many Requests"
-          500:
-            description: "Internal Server Error"
-        x-amazon-apigateway-integration:
-          httpMethod: GET
-          requestParameters:
-            integration.request.header.Authorization: method.request.header.Authorization
-            integration.request.path.uuid: method.request.path.uuid
-            integration.request.querystring.page: method.request.querystring.page
-            integration.request.querystring.page_size: method.request.querystring.page_size
-          responses:
-            200:
-              responseTemplates:
-                application/json: |
-                    #set($inputRoot = $input.path('$')) #set($host = $stageVariables.gateway_host) #set($uuid = $input.params('uuid'))
-                    #set($URLMatchRegex = "(^https?://)[^/]*[^?]*(.*$)") #set($updatedURL = "$1$host$context.resourcePath$2") #set($resourceUuidMatch = "{uuid}")
-                    {
-                      "count": $inputRoot.count,
-                      "next": "$inputRoot.next.replaceAll($URLMatchRegex, $updatedURL).replace($resourceUuidMatch, $uuid)",
-                      "previous": "$inputRoot.previous.replaceAll($URLMatchRegex, $updatedURL).replace($resourceUuidMatch, $uuid)",
-                      "results": $inputRoot.results
-                    }
-              statusCode: "200"
-            401:
-              statusCode: "401"
-            403:
-              statusCode: "403"
-            404:
-              statusCode: "404"
-            429:
-              statusCode: "429"
-            500:
-              statusCode: "500"
-            default:
-              statusCode: "400"
-          type: http
-          uri: "https://${stageVariables.enterprise_host}/enterprise/api/v1/enterprise_catalogs/{uuid}/"
-    enterpriseCustomerCatalogCourseByKey:
-      get:
-        operationId: get_enterprise_customer_catalog_course_by_key
-        parameters:
-          -
-            in: header
-            name: Authorization
-            required: true
-            type: string
-          -
-            in: path
-            name: uuid
-            required: true
-            type: string
-          -
-            in: path
-            name: course_key
-            required: true
-            type: string
-          -
-            in: query
-            name: page
-            required: false
-            type: number
-          -
-            in: query
-            name: page_size
-            required: false
-            type: number
-        produces:
-          - application/json
-          - application/csv
-        responses:
-          200:
-            description: OK
-          400:
-            description: "Bad Request"
-          401:
-            description: Unauthorized
-          403:
-            description: Forbidden
-          404:
-            description: "Not Found"
-          429:
-            description: "Too Many Requests"
-          500:
-            description: "Internal Server Error"
-        x-amazon-apigateway-integration:
-          httpMethod: GET
-          requestParameters:
-            integration.request.header.Authorization: method.request.header.Authorization
-            integration.request.path.course_key: method.request.path.course_key
-            integration.request.path.uuid: method.request.path.uuid
-            integration.request.querystring.page: method.request.querystring.page
-            integration.request.querystring.page_size: method.request.querystring.page_size
-          responses:
-            200:
-              statusCode: "200"
-            401:
-              statusCode: "401"
-            403:
-              statusCode: "403"
-            404:
-              statusCode: "404"
-            429:
-              statusCode: "429"
-            500:
-              statusCode: "500"
-            default:
-              statusCode: "400"
-          type: http
-          uri: "https://${stageVariables.enterprise_host}/enterprise/api/v1/enterprise_catalogs/{uuid}/courses/{course_key}/"
-    enterpriseCustomerCatalogCourseRunByUuid:
-      get:
-        operationId: get_enterprise_customer_catalog_course_run_by_id
-        parameters:
-          -
-            in: header
-            name: Authorization
-            required: true
-            type: string
-          -
-            in: path
-            name: uuid
-            required: true
-            type: string
-          -
-            in: path
-            name: course_run_id
-            required: true
-            type: string
-          -
-            in: query
-            name: page
-            required: false
-            type: number
-          -
-            in: query
-            name: page_size
-            required: false
-            type: number
-        produces:
-          - application/json
-          - application/csv
-        responses:
-          200:
-            description: OK
-          400:
-            description: "Bad Request"
-          401:
-            description: Unauthorized
-          403:
-            description: Forbidden
-          404:
-            description: "Not Found"
-          429:
-            description: "Too Many Requests"
-          500:
-            description: "Internal Server Error"
-        x-amazon-apigateway-integration:
-          httpMethod: GET
-          requestParameters:
-            integration.request.header.Authorization: method.request.header.Authorization
-            integration.request.path.course_run_id: method.request.path.course_run_id
-            integration.request.path.uuid: method.request.path.uuid
-            integration.request.querystring.page: method.request.querystring.page
-            integration.request.querystring.page_size: method.request.querystring.page_size
-          responses:
-            200:
-              statusCode: "200"
-            401:
-              statusCode: "401"
-            403:
-              statusCode: "403"
-            404:
-              statusCode: "404"
-            429:
-              statusCode: "429"
-            500:
-              statusCode: "500"
-            default:
-              statusCode: "400"
-          type: http
-          uri: "https://${stageVariables.enterprise_host}/enterprise/api/v1/enterprise_catalogs/{uuid}/course_runs/{course_run_id}/"
-    enterpriseCustomerCatalogProgramByUuid:
-      get:
-        operationId: get_enterprise_customer_catalog_program_by_uuid
-        parameters:
-          -
-            in: header
-            name: Authorization
-            required: true
-            type: string
-          -
-            in: path
-            name: uuid
-            required: true
-            type: string
-          -
-            in: path
-            name: program_uuid
-            required: true
-            type: string
-          -
-            in: query
-            name: page
-            required: false
-            type: number
-          -
-            in: query
-            name: page_size
-            required: false
-            type: number
-        produces:
-          - application/json
-          - application/csv
-        responses:
-          200:
-            description: OK
-          400:
-            description: "Bad Request"
-          401:
-            description: Unauthorized
-          403:
-            description: Forbidden
-          404:
-            description: "Not Found"
-          429:
-            description: "Too Many Requests"
-          500:
-            description: "Internal Server Error"
-        x-amazon-apigateway-integration:
-          httpMethod: GET
-          requestParameters:
-            integration.request.header.Authorization: method.request.header.Authorization
-            integration.request.path.program_uuid: method.request.path.program_uuid
-            integration.request.path.uuid: method.request.path.uuid
-            integration.request.querystring.page: method.request.querystring.page
-            integration.request.querystring.page_size: method.request.querystring.page_size
-          responses:
-            200:
-              statusCode: "200"
-            401:
-              statusCode: "401"
-            403:
-              statusCode: "403"
-            404:
-              statusCode: "404"
-            429:
-              statusCode: "429"
-            500:
-              statusCode: "500"
-            default:
-              statusCode: "400"
-          type: http
-          uri: "https://${stageVariables.enterprise_host}/enterprise/api/v1/enterprise_catalogs/{uuid}/programs/{program_uuid}/"
-    enterpriseCustomerCatalogs:
-      get:
-        operationId: get_enterprise_customer_catalogs
-        parameters:
-          -
-            in: header
-            name: Authorization
-            required: true
-            type: string
-          -
-            in: query
-            name: page
-            required: false
-            type: number
-          -
-            in: query
-            name: page_size
-            required: false
-            type: number
-        produces:
-          - application/json
-          - application/csv
-        responses:
-          200:
-            description: OK
-          400:
-            description: "Bad Request"
-          401:
-            description: Unauthorized
-          403:
-            description: Forbidden
-          404:
-            description: "Not Found"
-          429:
-            description: "Too Many Requests"
-          500:
-            description: "Internal Server Error"
-        x-amazon-apigateway-integration:
-          httpMethod: GET
-          requestParameters:
-            integration.request.header.Authorization: method.request.header.Authorization
-            integration.request.querystring.page: method.request.querystring.page
-            integration.request.querystring.page_size: method.request.querystring.page_size
-          responses:
-            200:
-              responseTemplates:
-                application/json: |
-                    #set($inputRoot = $input.path('$')) #set($host = $stageVariables.gateway_host)
-                    #set($URLMatchRegex = "(^https?://)[^/]*[^?]*(.*$)") #set($updatedURL = "$1$host$context.resourcePath$2")
-                    {
-                      "count": $inputRoot.count,
-                      "next": "$inputRoot.next.replaceAll($URLMatchRegex, $updatedURL)",
-                      "previous": "$inputRoot.previous.replaceAll($URLMatchRegex, $updatedURL)",
-                      "results": $inputRoot.results
-                    }
-              statusCode: "200"
-            401:
-              statusCode: "401"
-            403:
-              statusCode: "403"
-            404:
-              statusCode: "404"
-            429:
-              statusCode: "429"
-            500:
-              statusCode: "500"
-            default:
-              statusCode: "400"
-          type: http
-          uri: "https://${stageVariables.enterprise_host}/enterprise/api/v1/enterprise_catalogs/"
     enterpriseCustomerCourseEnrollments:
       post:
         consumes:
